[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helper-plot-hangul"
version = "0.5.6"
description = "Matplotlib 한글 폰트 자동 설정 라이브러리"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "c0z0c", email = "c0z0c.dev@gmail.com"}
]
keywords = ["matplotlib", "한글", "hangul", "font", "korean", "plot", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/c0z0c-helper/helper_plot_hangul"
Repository = "https://github.com/c0z0c-helper/helper_plot_hangul"
Issues = "https://github.com/c0z0c-helper/helper_plot_hangul/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
helper_plot_hangul = ["fonts/*.ttf"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"
